# wall-cli

./: Cargo.toml  README.md  shell.nix
.github/workflows/: release.yml
ci/: cargo-out-dir  ubuntu-install-packages
src/: main.rs
