[package]
name = "wall-cli"
version = "0.1.2"
authors = ["Matteo G. <matteoguarda@tutanota.com>"]
edition = "2018"
description = "A OS and Desktop Environment indipendent get/set wallpaper library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/agnipau/wall-cli"
readme = "README.md"
keywords = ["wallpaper", "desktop", "background", "cli"]
categories = ["command-line-utilities"]
exclude = [
    "examples/*",
]

[dependencies]
wall = "0.2.3"
clap = "2.33.3"
anyhow = "1.0.32"

[[bin]]
name = "wallc"
path = "src/main.rs"

